# EbcDictionary

./: .gitignore  Cargo.toml  README.md  ebcdictionary.py
ebcdict_cli/: Cargo.toml
ebcdict_cli/src/: main.rs
ebcdict_converter/: Cargo.toml
ebcdict_converter/src/: byte_string.rs  lib.rs
ebcdict_converter/src/byte_string/: ebcdic_table.rs
ebcdict_gui/: Cargo.toml
ebcdict_gui/src/: main.rs
